--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,11 +13,11 @@
         <div class="square-font">
             to present your business
         </div>
-        <div class="play-btn-container">
-            <button class="play-button" (click)="onShowVideo()"></button>
-        </div>
     </div>
     <div class="side-content">
+        <div class="play-btn-container">
+            <button id="youtube-player" class="play-button" (click)="onShowVideo()"></button>
+        </div>
         <div class="orange contact-info">
             <ul>
                 <li>Medappa Chreanda</li>
