--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,7 @@
 body {
     background: #15343f;
     font-size: 12px;
+    margin: 0;
 }
 
 .orange {
@@ -21,6 +22,7 @@ body {
   max-width: 600px;
   margin: 0 auto;
   overflow: hidden;
+  margin-top: 200px;
 
   .main-title {
     color: #f19e1c;
@@ -30,6 +32,7 @@ body {
     font-size: 6em;
     text-align: center;
     line-height: 100px;
+    font-family: 'Exo', sans-serif;
   }
 
   .side-title {
@@ -43,6 +46,9 @@ body {
 .square-font {
   color: #fff;
   text-align: center;
+  font-family: 'Exo', sans-serif;
+  font-size: 2.5em;
+  padding: 10px;
 }
 
 .funny-font {
@@ -50,6 +56,7 @@ body {
   font-size: 3em;
   line-height: 0.8em;
   margin-top: 15px;
+  font-family: 'Satisfy', cursive;
   -webkit-transform: rotate(-20deg); 
   -moz-transform: rotate(-20deg);  
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=-3); /*for IE*/
@@ -57,18 +64,41 @@ body {
 .play-btn-container {
   text-align: center;
   margin: 0 auto;
+
   .play-button {
+    background: url(/assets/img/play.png);
+    width: 100px;
+    background-size: cover;
+    height: 100px;
+    border: none;
+    cursor: pointer;
   }
 }
 
 .side-content {
+  padding-top: 100px;
+
   .contact-info {
     color: #fff;
-    width: 200px;
-    float:  right;
+    width: 220px;
+    float : right;
+    font-size: 1.5em;
+    font-family: 'Exo';
+    border-radius: 10px 0 0 10px;
+    margin-top: -100px;
+
     ul {
       list-style: none;
       padding: 10px;
+      margin: 0;
+      
+      li {
+        a {
+          text-decoration: none;
+          color: inherit;
+          cursor: pointer;  
+        }  
+      }
     }
   }
 }
